Search function updated

--- a/TODO
+++ b/TODO
@@ -1,3 +1,1 @@
-1. Update 'Additional file 2.pdf' with latest instructions
-
-2. In the 'Additional file 2.pdf' explain MedCPT chunk download etc.
+1. Update PDF extract feature
